--- a/app/src/main/res/layout-land/juego.xml
+++ b/app/src/main/res/layout-land/juego.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
-        android:padding="10dp">
+        android:layout_width="490dp"
+        android:layout_height="411dp"
+        android:layout_marginTop="20dp"
+        android:baselineAligned="false"
+        android:padding="2dp">
 
         //FILA 1
 
@@ -111,8 +113,8 @@
         //FILA 4
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center">
 
             <ImageButton
@@ -141,43 +143,51 @@
 
         </TableRow>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="50dp"
-            android:gravity="center_horizontal"
-            android:padding="10dp">
-
-            <Button
-                android:id="@+id/boton_juego_reiniciar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:text="@string/boton_juego_reiniciar"></Button>
-
-            <Button
-                android:id="@+id/boton_juego_salir"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/boton_juego_salir"></Button>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="50dp"
-            android:gravity="center_horizontal"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/texto_puntuacion"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="25dp"></TextView>
-        </LinearLayout>
-
 
     </TableLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="116dp"
+        android:layout_marginTop="50dp"
+        android:baselineAligned="false"
+        android:gravity="center_horizontal"
+        android:padding="10dp">
+
+        <Button
+            android:id="@+id/boton_juego_reiniciar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="@string/boton_juego_reiniciar"></Button>
+
+        <Button
+            android:id="@+id/boton_juego_salir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/boton_juego_salir"></Button>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="-500dp"
+        android:layout_height="-100dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/texto_puntuacion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="25dp"></TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"></LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
