--- a/app/src/main/res/layout-land/juego.xml
+++ b/app/src/main/res/layout-land/juego.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TableLayout
-        android:layout_width="490dp"
-        android:layout_height="411dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="450dp"
+        android:layout_height="400dp"
+        android:layout_marginTop="1dp"
         android:baselineAligned="false"
-        android:padding="2dp">
+        android:padding="1dp">
 
-        //FILA 1
+        //Fila 1
 
         <TableRow
             android:layout_width="match_parent"
@@ -20,26 +21,26 @@
 
             <ImageButton
                 android:id="@+id/boton00"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="0"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton01"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="1"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton02"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="2"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton03"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="3"></ImageButton>
 
         </TableRow>
@@ -48,31 +49,31 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:gravity="center">
 
             <ImageButton
                 android:id="@+id/boton04"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="0"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton05"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="1"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton06"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="2"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton07"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="3"></ImageButton>
 
         </TableRow>
@@ -86,26 +87,26 @@
 
             <ImageButton
                 android:id="@+id/boton08"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="0"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton09"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="1"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton10"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="2"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton11"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="3"></ImageButton>
 
         </TableRow>
@@ -119,26 +120,26 @@
 
             <ImageButton
                 android:id="@+id/boton12"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="0"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton13"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="1"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton14"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="2"></ImageButton>
 
             <ImageButton
                 android:id="@+id/boton15"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_column="3"></ImageButton>
 
         </TableRow>
@@ -147,9 +148,12 @@
     </TableLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="116dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="-449dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="25dp"
         android:baselineAligned="false"
         android:gravity="center_horizontal"
         android:padding="10dp">
@@ -167,27 +171,26 @@
             android:layout_height="wrap_content"
             android:text="@string/boton_juego_salir"></Button>
 
+
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="-500dp"
-        android:layout_height="-100dp"
-        android:layout_marginTop="250dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginRight="100dp"
-        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/texto_puntuacion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="25dp"></TextView>
+    <TextView
+        android:id="@+id/texto_puntuacion"
+        android:layout_width="179dp"
+        android:layout_height="96dp"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="27dp"
+        android:gravity="center"
+        android:textSize="25dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
-    </LinearLayout>
+    </TextView>
 
-</LinearLayout>
+
+</RelativeLayout>
+
+
+
+
